--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,1 +1,22 @@
-<h1>Hello, World!</h1>
+{% extends "base.html" %}
+
+{% load django_bootstrap5 %}
+{% load i18n %}
+{% load l10n %}
+
+
+{% block content %}
+
+<h1 class="my-4"></h1>
+<div class="card">
+  <div class="card-body p-5 bg-dark text-white">
+    <div class="display-4">{% trans "Привет от Хекслета" %}</div>
+      <p class="lead">{% trans "Практические курсы по программированию" %}</p>
+      <hr>
+      <a button type="button" class="btn btn-warning btn-lg" href="https://ru.hexlet.io">{% trans "Узнать больше" %}</a>
+    </div>
+  </div>
+</div>
+</div>
+
+{% endblock %}
