--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -22,6 +22,23 @@
             <a class="nav-link text-white" href="/users/">{% trans "Пользователи" %}</a>
           </li>
         </ul>
+
+          {% if user.is_authenticated %}
+
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link text-white" href="/statuses/">{% trans 'Статусы' %}</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="/labels/">{% trans "Метки" %}</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="/tasks/">{% trans "Задачи" %}</a></li>
+        </ul>
+        <ul class="navbar-nav">
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <input class="btn nav-link text-white" type="submit" value="{% trans 'Выход' %}"/>
+            </form>
+        </ul>
+
+        {% else %}
+
         <ul class="navbar-nav">
            <li class="nav-item">
               <a class="nav-link text-white" href="/login/">{% trans "Вход" %}</a>
@@ -30,9 +47,11 @@
               <a class="nav-link text-white" href="/users/create/">{% trans "Регистрация" %}</a>
            </li>
         </ul>
+
+          {% endif %}
+
       </div>
     </nav>
-    <div class="container wrapper flex-grow-1">
 
 {% block content %}
 {% endblock %}
