--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -5,8 +5,12 @@
 {% load l10n %}
 
 
+
 {% block content %}
 
+{% bootstrap_messages %}
+
+<div class="container wrapper flex-grow-1">
 <h1 class="my-4"></h1>
 <div class="card">
   <div class="card-body p-5 bg-dark text-white">
@@ -20,3 +24,5 @@
 </div>
 
 {% endblock %}
+
+
