--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -15,11 +15,11 @@
   {% csrf_token %}
     <div class="mb-3">
       <label class="form-label text-white" for="id_username">{% trans "Имя пользователя" %}</label>
-      <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="{% trans 'Имя пользователя' %}" required id="id_username">
+      <input type="text" name="username"  maxlength="150" class="form-control" placeholder="{% trans 'Имя пользователя' %}" required id="id_username">
     </div>
     <div class="mb-3">
       <label class="form-label text-white" for="id_password">{% trans "Пароль" %}</label>
-      <input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="{% trans 'Пароль' %}" required id="id_password">
+      <input type="password" name="password" class="form-control" placeholder="{% trans 'Пароль' %}" required id="id_password">
     </div>
     <input class="btn btn-warning" type="submit" value="{% trans 'Войти' %}">
 </form>
