--- a/task_manager/templates/users/user_update.html
+++ b/task_manager/templates/users/user_update.html
@@ -15,15 +15,15 @@
     {% csrf_token %}
   <div class="mb-3">
       <label class="form-label text-white" for="id_first_name">{% trans "Имя" %}</label>
-      <input type="text" name="first_name" value="asd" maxlength="150" class="form-control" placeholder="Имя" required id="id_first_name">
+      <input type="text" name="first_name" value="{{ user.first_name }}" maxlength="150" class="form-control" placeholder="Имя" required id="id_first_name">
   </div>
     <div class="mb-3">
         <label class="form-label text-white" for="id_last_name">{% trans "Фамилия" %}</label>
-        <input type="text" name="last_name" value="asd" maxlength="150" class="form-control" placeholder="Фамилия" required id="id_last_name">
+        <input type="text" name="last_name" value="{{ user.last_name }}" maxlength="150" class="form-control" placeholder="Фамилия" required id="id_last_name">
     </div>
     <div class="mb-3">
         <label class="form-label text-white" for="id_username">{% trans "Имя пользователя" %}</label>
-        <input type="text" name="username" value="asd" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" required aria-describedby="id_username_helptext" id="id_username">
+        <input type="text" name="username" value="{{ user.username }}" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" required aria-describedby="id_username_helptext" id="id_username">
         <div class="form-text">{% trans "Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./+/-/_." %}</div>
     </div>
     <div class="mb-3">
