--- a/task_manager/templates/users/user_delete.html
+++ b/task_manager/templates/users/user_delete.html
@@ -11,7 +11,7 @@
 
 <h1 class="my-4 text-white">{% trans "Удаление пользователя" %}</h1>
 
-    <p class="text-white">{% trans "Вы уверены, что хотите удалить" %} {{ user.first_name }} {{ user.last_name }}?</p>
+    <p class="text-white">{% trans "Вы уверены, что хотите удалить" %} {{ user }} </p>
 
 
 <form method="post">
