--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -11,16 +11,9 @@
 
     <h1 class="my-4 text-white">{% trans "Вход" %}</h1>
 
-<form method="post">
+<form method="post" class="text-white">
   {% csrf_token %}
-    <div class="mb-3">
-      <label class="form-label text-white" for="id_username">{% trans "Имя пользователя" %}</label>
-      <input type="text" name="username"  maxlength="150" class="form-control" placeholder="{% trans 'Имя пользователя' %}" required id="id_username">
-    </div>
-    <div class="mb-3">
-      <label class="form-label text-white" for="id_password">{% trans "Пароль" %}</label>
-      <input type="password" name="password" class="form-control" placeholder="{% trans 'Пароль' %}" required id="id_password">
-    </div>
+    {% bootstrap_form form %}
     <input class="btn btn-warning" type="submit" value="{% trans 'Войти' %}">
 </form>
 </div>
