--- a/task_manager/templates/users/user_update.html
+++ b/task_manager/templates/users/user_update.html
@@ -11,35 +11,11 @@
 
    <h1 class="my-4 text-white">{% trans "Изменение пользователя" %}</h1>
 
-<form method="post">
-    {% csrf_token %}
-  <div class="mb-3">
-      <label class="form-label text-white" for="id_first_name">{% trans "Имя" %}</label>
-      <input type="text" name="first_name" value="{{ user.first_name }}" maxlength="150" class="form-control" placeholder="Имя" required id="id_first_name">
-  </div>
-    <div class="mb-3">
-        <label class="form-label text-white" for="id_last_name">{% trans "Фамилия" %}</label>
-        <input type="text" name="last_name" value="{{ user.last_name }}" maxlength="150" class="form-control" placeholder="Фамилия" required id="id_last_name">
-    </div>
-    <div class="mb-3">
-        <label class="form-label text-white" for="id_username">{% trans "Имя пользователя" %}</label>
-        <input type="text" name="username" value="{{ user.username }}" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" required aria-describedby="id_username_helptext" id="id_username">
-        <div class="form-text">{% trans "Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./+/-/_." %}</div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label text-white" for="id_password1">{% trans "Пароль" %}</label>
-        <input type="password" name="password1" autocomplete="new-password" class="form-control" placeholder="Пароль" required aria-describedby="id_password1_helptext" id="id_password1">
-        <div class="form-text">
-            <ul>
-                <li>{% trans "Ваш пароль должен содержать как минимум 3 символа." %}</li>
-            </ul>
-        </div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label text-white" for="id_password2">{% trans "Подтверждение пароля" %}</label>
-        <input type="password" name="password2" autocomplete="new-password" class="form-control" placeholder="Подтверждение пароля" required aria-describedby="id_password2_helptext" id="id_password2">
-        <div class="form-text">{% trans "Для подтверждения введите, пожалуйста, пароль ещё раз." %}</div>
-    </div>
+<form method="post" class="text-white">
+        {% csrf_token %}
+
+        {% bootstrap_form form %}
+
     <input class="btn btn-warning" type="submit" value="{% trans 'Изменить' %}">
 </form>
 
