--- a/task_manager/templates/tasks/tasks_index.html
+++ b/task_manager/templates/tasks/tasks_index.html
@@ -13,52 +13,26 @@
   <a class="btn btn-warning mb-3" href="{% url 'task_create' %}" role="button">{% trans "Создать задачу" %}</a>
 
 <div class="card mb-3">
-  <div class="card-body bg-dark">
-    <form class="form-inline center" method="get">
+  <div class="card-body bg-dark text-white">
+    <form  method="get">
 
-      <div class="mb-3">
-        <label class="form-label text-white" for="id_status">{% trans "Статус" %}</label>
-        <select name="status" class="form-select ml-2 mr-3" id="id_status">
-          <option value="" selected>---------</option>
-          {% for status in statuses %}
-              <option value="{{ status.id }}" {% if status.id == selected_status_id %}selected{% endif %}>
-                  {{ status.name }}
-              </option>
-          {% endfor %}
-        </select>
-      </div>
+          {% bootstrap_form filter.form %}
 
-      <div class="mb-3">
-        <label class="form-label text-white" for="id_executor">{% trans "Исполнитель" %}</label>
-        <select name="executor" class="form-select mr-3 ml-2" id="id_executor">
-          <option value="" selected>---------</option>
-          {% for user in users %}
-              <option value="{{ user.id }}" {% if user.id == selected_executor_id %}selected{% endif %}>
-                  {{ user.first_name }} {{ user.last_name }}
-              </option>
-          {% endfor %}
-        </select>
-      </div>
-
-      <div class="mb-3">
-        <label class="form-label text-white" for="id_label">{% trans "Метка" %}</label>
-        <select name="label" class="form-select ml-2 mr-3" id="id_label">
-          <option value="" selected>---------</option>
-          {% for label in labels %}
-              <option value="{{ label.id }}" {% if label.id == selected_label_id %}selected{% endif %}>
-                  {{ label.name }}
-              </option>
-          {% endfor %}
-        </select>
-      </div>
-
-      <div class="mb-3">
-        <div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input mr-3" id="id_self_tasks">
-          <label class="form-check-label text-white" for="id_self_tasks">{% trans "Только свои задачи" %}</label>
-        </div>
-      </div>
         <input class="btn btn-warning" type="submit" value="{% trans 'Показать' %}">
     </form>
+
+    <script>
+
+    document.addEventListener('DOMContentLoaded', function() {
+      var label = document.querySelector('label[for="id_self_tasks"]');
+      if (label) {
+        label.style.color = 'white';
+      }
+    });
+
+    </script>
+
+
   </div>
 </div>
 
@@ -76,7 +50,7 @@
     </tr>
   </thead>
 
-  {% for task in tasks %}
+  {% for task in filtered_tasks %}
 
   <tbody>
     <tr>
